--- a/log_filter/aws-cloudwatch-log-filter.yaml
+++ b/log_filter/aws-cloudwatch-log-filter.yaml
@@ -68,7 +68,7 @@ Resources:
       FilterPattern: RECORD
       MetricTransformations:
         -
-          MetricValue: 2
+          MetricValue: 1
           MetricNamespace: "Han_CustomMetrics"
           MetricName: "RecordLogCount"
   TristanCustomMetricsAlarm:
@@ -76,9 +76,9 @@ Resources:
     Properties:
       Namespace: Han_CustomMetrics
       MetricName: RecordingLog
-      Statistic: Sum
+      Statistic: Minimum
       Period: 60
-      EvaluationPeriods: 2
+      EvaluationPeriods: 1
       ComparisonOperator: GreaterThanOrEqualToThreshold
       Threshold: 1
       Unit: Count
